--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "browserify": "^13.0.0",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-babel-minify": "^0.2.0",
     "gulp-clean-css": "^3.5.0",
     "gulp-connect": "^2.3.1",
     "gulp-livereload": "^3.8.1",
@@ -29,6 +30,7 @@
     "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
-    "bootstrap": "^4.0.0-alpha.6"
+    "bootstrap": "^4.0.0-alpha.6",
+    "d3": "^4.10.0"
   }
 }
